refactored saves page to fix bugs, added a gap between answers on saves page, added to separation logic in store for data

--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -56,6 +56,10 @@
     gap: 15px;
 }
 
+.gap-10 {
+    gap: 10px;
+}
+
 .button {
     background-color: var(--button-color);
     color: var(--font-color);
